plugins {
    id 'java'
//    id 'org.jetbrains.kotlin.jvm' version '2.1.20'
    id 'org.jetbrains.intellij.platform' version '2.11.0'
}

group = "com.ddlab.rnd"
version = "1.0.7"

repositories {
    mavenCentral()
    intellijPlatform {
        defaultRepositories()
    }
}



dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.29'
    implementation 'org.eclipse.jgit:org.eclipse.jgit:7.5.0.202512021534-r'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.6'

    implementation 'tools.jackson.core:jackson-core:3.0.3'
    implementation 'tools.jackson.core:jackson-databind:3.0.3'
    intellijPlatform {
        intellijIdea '2025.2.4'
//        testFramework(org.jetbrains.intellij.platform.gradle.TestFrameworkType.Platform)
    }
}

intellijPlatform {
    pluginConfiguration.with {
        ideaVersion.with {
            sinceBuild.set('241')
        }

        changeNotes.set('''
            Initial version
        ''')
    }
}

tasks.withType(JavaCompile).configureEach {
    // Set the JVM compatibility versions
    sourceCompatibility = '21'
    targetCompatibility = '21'
}
